# my_rb1_robot

my_rb1_description/: package.xml
my_rb1_description/config/: config.rviz
my_rb1_description/launch/: display.launch
my_rb1_description/urdf/: my_rb1_robot.urdf
my_rb1_gazebo/: package.xml
my_rb1_gazebo/launch/: my_rb1_robot_warehouse.launch
my_rb1_ros/: CMakeLists.txt  package.xml
my_rb1_ros/launch/: rotate_service.launch
my_rb1_ros/src/: rotate_service.cpp
