<?xml version="1.0"?>
<package format="2">
  <name>my_rb1_gazebo</name>
  <version>0.0.0</version>
  <description>The my_rb1_gazebo package</description>
  <maintainer email="chatzialex@yahoo.gr">Alexandros Chatzikyriakos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
